@@ -570,6 +570,17 @@
       </templates>
     </page>
 
+    <page name="fulfilled_orders"
+          title="[FULFILLED_ORDERS]"
+          class="FulfilledOrdersPage"
+          class_file="manager/pages/FulfilledOrdersPage.class.php"
+          parent="accounts"
+          url="manager_content.php?page=fulfilled_orders">
+      <templates>
+        <template name="default" file="manager_FulfilledOrdersPage.tpl"/>
+      </templates>
+    </page>
+
     <page name="view_order"
           title="[ORDER] #{order_id}"
           class="ViewOrderPage"
