@@ -2,6 +2,7 @@
 ====================
 
  * (trac #93) Fixed a multiple error-message bug for Access Denied pages
+ * (trac #96) Added Fulfilled Orders page
 
 7/31/2006 - jdiamond
 ====================
